# electronics_retail_chain_API

./: .env.sample  .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
contacts/: admin.py  models.py  serializers.py  urls.py  views.py
employees/: admin.py  apps.py  models.py  serializers.py  urls.py  user_manager.py  views.py
factories/: admin.py  apps.py  models.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
retail_chains/: admin.py  apps.py  models.py
suppliers/: admin.py  apps.py  signals.py  urls.py  validators.py
suppliers/models/: __init__.py  factories.py  retail_chains.py  vendors.py
suppliers/serializers/: __init__.py  factory_serializers.py  retail_chain_serializers.py  vendor_serializers.py
suppliers/views/: __init__.py  factory_views.py  retail_chain_views.py  services.py  vendor_views.py
vendors/: admin.py  apps.py  models.py
